[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/game_screen/level_info_pane.gd" type="Script" id=1]
[ext_resource path="res://fonts/time_and_space/TimeandSpace-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/game_screen/objective_label.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[node name="LevelInfoPane" type="PanelContainer"]
margin_right = 374.0
margin_bottom = 286.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 374.0
margin_bottom = 286.0
custom_constants/margin_right = 10
custom_constants/margin_top = 15
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="Items" type="VBoxContainer" parent="Margin"]
margin_left = 10.0
margin_top = 15.0
margin_right = 364.0
margin_bottom = 281.0

[node name="TitleLabel" type="Label" parent="Margin/Items"]
margin_right = 354.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "This is the title of the scene"
autowrap = true

[node name="DescriptionLabel" type="Label" parent="Margin/Items"]
margin_top = 36.0
margin_right = 354.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 3 )
text = "this is the description of the scene very very very very very very very ery very very very very long indeed"
autowrap = true

[node name="Placeholder" type="Control" parent="Margin/Items"]
margin_top = 106.0
margin_right = 354.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 10 )

[node name="PrimaryObjective" type="Label" parent="Margin/Items"]
margin_top = 120.0
margin_right = 354.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 4 )
text = "Primary Objective"
autowrap = true

[node name="PrimaryObjectiveLabel" parent="Margin/Items" instance=ExtResource( 3 )]
margin_top = 154.0
margin_bottom = 174.0

[node name="SecondaryObjectives" type="Label" parent="Margin/Items"]
margin_top = 178.0
margin_right = 354.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 4 )
text = "Secondary Objectives"
autowrap = true

